--- a/pages/pols2024.md
+++ b/pages/pols2024.md
@@ -19,39 +19,30 @@ Leonardo Agasso, Giacomo Frangipane, Silvia Lazzardi, Giorgio Tallarico
   
 ***
   
-<h2 style="text-align: center;"><b style="font-size:48px">:large_blue_circle:</b><b> APPLICATIONS ARE OPEN: APPLY HERE <b style="font-size:48px">:large_blue_circle:</b></b></h2>
-<h3 style="text-align: center;"><b>Deadline: February 20</b></h3>
-[Link to the Lake Como web site](http://pols_italy.unimi.it/)
+<h2 style="text-align: center;"><b style="font-size:38px">:large_blue_circle:</b><b> APPLICATIONS ARE OPEN <b style="font-size:38px">:large_blue_circle:</b></b></h2>
+<h4 style="text-align: center;"><b>Deadline: February 20, 2024</b></h4>
+<h4 style="text-align: center;"><b>
+<a href="http://pols_italy.unimi.it/"  target="_blank">[APPLY HERE]</a>
+</b></h4>
 
-Registration deadline **1 May**. Registration can be carried out only after receiving the e-mail confirmation that your application has been accepted.
+You can request a fee waiver and travel support in the application form.
 
-Conference Registration Fee: 250 euros (required upon registration)
 
-The fee includes admittance, coffee breaks, and social dinner. The fee does not include the stay, transportation costs to/from the ICTP or other meals. 
 
-You can request a fee waiver in the application form.
 
-In order to apply for travel/stay support please contact the PoLS coordinators in your country or Margie Dieter <mmdieter@rice.edu>.
+**ICTP Guesthouse stay**. We have booked 70 double rooms at the ICTP guest houses for conference attendees. You may request lodging at the ICTP guesthouse in the applicaiton form. This is a spartan accommodation but convenient as it is on campus and cheap.  Selected applicants will be invited to contact directly ICTP to pay for the reserved rooms.
 
-<br/>
+**Registration deadline 1 May**. Registration can be carried out only after receiving the e-mail confirmation that your application has been accepted. **Conference Registration Fee: 250 euros** (required upon registration). The fee includes admittance, coffee breaks, and social dinner. The fee does not include the stay, transportation costs to/from the ICTP or other meals. 
 
-##### **ICTP Guesthouse stay** 
-We have booked 70 double rooms at the ICTP guest houses for conference attendees. You may request lodging at the ICTP guesthouse . This is a spartan accommodation but convenient as it is on campus.  Selected applicants will be invited to contact directly ICTP to pay for the reserved rooms.
+**Scientific Program - The scientific program will be posted here**
+The sessions will be arranged by scientific topic. Most oral communications will be from young researchers - selected from the abstracts. We plan sparse senior talks (1-2 per half-day session).
 
-<br/>
+For any further information please contact the PoLS coordinators in your country or Margie Dieter <mmdieter@rice.edu>.
 
-##### **Scientific Program - The scientific program will be posted here** 
-The sessions will be arranged by scientific topic. Most oral communications will be from young researchers - selected from the abstracts. We plan sparse senior talks (1-2 per half-day session) 
+**PoLS Satellite Workshop on Olfaction - June 7-8 2024.**
+If you are interested 
+see here: [LINK WEB SITE](http://pols_italy.unimi.it/pols2024){:target="_blank"}
 
-PoLS Satellite Workshop on Olfaction June 7-8 2024 - If you are interested 
-see here: [LINK WEB SITE](http://pols_italy.unimi.it/)
-or contact
-Margie Dieter <mmdieter@rice.edu>
-
-<br/>
-
-##### **Venue** 
-[https://www.ictp.it/](https://www.ictp.it/)  
-See intructions on how to reach it here: [https://www.ictp.it/home/transportation](https://www.ictp.it/home/transportation)
+**Venue:** [ictp.it](https://www.ictp.it/){:target="_blank"}. See instructions on how to reach it [here](https://www.ictp.it/home/transportation){:target="_blank"}
 
  
