--- a/pages/pols2024.md
+++ b/pages/pols2024.md
@@ -20,9 +20,9 @@ Leonardo Agasso, Giacomo Frangipane, Silvia Lazzardi, Giorgio Tallarico
 ***
   
 <h2 style="text-align: center;"><b style="font-size:38px">:large_blue_circle:</b><b> APPLICATIONS ARE OPEN <b style="font-size:38px">:large_blue_circle:</b></b></h2>
-<h4 style="text-align: center;"><b>Deadline: February 20, 2024</b></h4>
+<h2 style="text-align: center;"><b style="font-size:40px"><a href="https://fondazionealessandrovolta.org/pols2024/"  target="_blank">APPLY HERE</a></b></h2>
 <h4 style="text-align: center;"><b>
-<a href="http://pols_italy.unimi.it/"  target="_blank">[APPLY HERE]</a>
+<h4 style="text-align: center;"><b>Deadline: February 20, 2024</b></h4>
 </b></h4>
 
 You can request a fee waiver and travel support in the application form.
